Fix: vertical alignment of modal content

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -4,7 +4,7 @@
   z-index: 100; /* Sit on top */
   padding-top: 1.25rem;
   left: 0;
-  top: 0;
+  top: 10%;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
@@ -14,9 +14,7 @@
 
 /* Modal Content */
 .modal-content {
-  position: absolute;
-  left: 10%;
-  top: 10%;
+  position: relative;
   background-color: #fefefe;
   margin: auto;
   padding: 0;
